Fix overflowing text, update button colour scheme

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
     background-color: rgb(200, 214, 228);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:  Helvetica, Arial, sans-serif;
     margin: 0px;
 
 }
@@ -62,22 +62,25 @@ ol {
 .recipelist {
     display: block;
     text-align: center;
-    margin-left: 40%;
-    margin-right: 40%;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 1%;
     padding: 10px;
-    border: 1px solid;
+    border: 1px solid black;
+    background-color: rgba(169, 69, 22, 0.781);
+    color: white;
+    inline-size: 100px;
 }
 
 .recipelist:hover {
     display: block;
     text-align: center;
-    margin-left: 40%;
-    margin-right: 40%;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 1%;
     padding: 10px;
     border: 1px solid;
-    background-color: aliceblue;
+    background-color: rgba(191, 112, 39, 0.912);
 }
 
 .acknowledgement {
